--- a/web_editor/index.html
+++ b/web_editor/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Deforum Next Editor (MVP)</title>
+    <title>Deforum Next Editor v16 (MVP)</title>
   </head>
   <body style="margin:0;">
     <div id="root"></div>
